fix podcast on IE 11

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_podcast.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_podcast.sass
@@ -61,6 +61,7 @@
         @include breakpoint(tablet, up)
             -webkit-line-clamp: 1 /* number of lines to show */
             font-size: 52px
+            max-height: 72px
     &__desc
         font-size: 16px
         font-weight: normal
